--- a/FREECODECAMP/styles4.css
+++ b/FREECODECAMP/styles4.css
@@ -1,37 +1,42 @@
-*{
+* {
     box-sizing: border-box;
-}
-
-.gallery img{
+  }
+  
+  body {
+    margin: 0;
+    font-family: sans-serif;
+    background: #f5f6f7;
+  }
+  
+  .header {
+    text-align: center;
+    text-transform: uppercase;
+    padding: 32px;
+    background-color: #0a0a23;
+    color: #fff;
+    border-bottom: 4px solid #fdb347;
+  }
+  
+  .gallery {
+    display: flex;
+    flex-direction: row;
+    flex-wrap: wrap;
+    justify-content: center;
+    align-items: center;
+    gap: 16px;
+    max-width: 1400px;
+    margin: 0 auto;
+    padding: 20px 10px;
+  }
+  
+  .gallery img {
     width: 100%;
     max-width: 350px;
     height: 300px;
     object-fit: cover;
     border-radius: 10px;
-}
-body{   
-    font-family: sans-serif;
-    background-color: #f5f6f7;
-    margin: 0;
-}
-.header{
-    text-transform: uppercase;
-    padding: 32px;
-    background: #0a0a23 ;
-    color:#fff;
-    border-bottom :4px solid #fdb347;
-    text-align: center;
-    background-color: 4px solid #fdb347;
-}
-.gallery{
-    display: flex;
-    gap: 16px;
-
-    flex-direction: row;
-    flex-wrap: wrap;
-    justify-content: center;
-    align-items: center;
-    padding: 20px 10px;
-    max-width: 1400px ;
-    margin: 0 auto ;
-}
+  }
+  .gallery::after {
+    content: "";
+    width: 350px;
+  }
