--- a/FREECODECAMP/styles5.css
+++ b/FREECODECAMP/styles5.css
@@ -14,11 +14,55 @@ html{
 * {
     box-sizing: border-box;
 }
-h1{
+.bold{
     font-weight: 800;
-    text-align:center;
-    margin-top: -4px;
-    margin-bottom: -4px;
-    margin-left: 0;
-    margin-right: 0;
+}
+header h1 {
+
+    letter-spacing: 0.15px;
+
+  text-align: center;
+  margin: -4px 0;
+}
+p{  
+    margin: 0;
+    display: flex;
+    justify-content: space-between;
+}
+
+.divider{
+    border-bottom: 1px solid #888989;
+    margin: 2px 0;
+}
+.large {
+    height: 10px;
+}
+.large,.medium{
+    background-color: black;
+    border: 0;
+
+}
+
+.small-text{
+    font-size: 0.85rem;
+}
+.calories-info h2{
+
+    margin: 0;
+}
+.calories-info {
+    display: flex;
+    justify-content: space-between;
+    align-items: flex-end;
+
+}
+.left-container p{
+    margin: -5px -2px;
+    font-size:  2em;
+    font-weight: 700;
+}
+.calories-info span{
+    font-size: 2.4em;
+    font-weight: 700;
+
 }
