--- a/FREECODECAMP/styles5.css
+++ b/FREECODECAMP/styles5.css
@@ -62,7 +62,29 @@ p{
     font-weight: 700;
 }
 .calories-info span{
+    margin: -7px -2px;
     font-size: 2.4em;
     font-weight: 700;
 
+}
+.medium{
+    height: 5px;
+}
+.right{
+    justify-content: flex-end;
+}
+.indent{
+    margin-left: 1em;
+}
+.daily-value p:not(.no-divider){
+    border-bottom: 1px solid #888989;
+}
+.note{
+    font-size: 0.6rem;
+    margin: 5px 0;
+    padding: 0 8px;
+    text-indent: -8px;
+}
+.double-indent{
+    margin-left: 2em;
 }
