--- a/FREECODECAMP/styles7.css
+++ b/FREECODECAMP/styles7.css
@@ -6,16 +6,17 @@ body{
     color: #0a0a23;
 }
 span[class~="sr-only"]{
-    border: 0;
-    clip: rect(1px, 1px, 1px,1px);
-    clip-path: inset(50%);
-    width: 1px;
-    height: 1px;
-    overflow: hidden;
-    white-space: nowrap;
-    position: absolute;
-    padding: 0;
-    margin: -1px;
+    border: 0 !important;
+    clip: rect(1px, 1px, 1px,1px) !important;
+    clip-path: inset(50%) !important;
+    width: 1px !important;
+    height: 1px !important;
+    overflow: hidden !important;
+    white-space: nowrap !important;
+    position: absolute !important;
+    padding: 0 !important;
+    margin: -1px !important;
+    
 }
 h1{
     max-width: 37.25rem;
@@ -28,3 +29,38 @@ h1 .flex{
     gap: 1rem;
 }
 
+h1 .flex span:first-of-type{
+    font-size: 0.7em;
+}
+h1 .flex span:last-of-type{
+    font-size: 1.2em;
+}
+section{
+    max-width: 40rem;
+    margin: 0 auto;
+    border: 2px solid #d0d0d5;
+}
+#years{
+    justify-content: flex-end;
+    top: 0;
+    display: flex;
+    position: sticky;
+    color: #fff;
+    background-color: #0a0a23;
+    margin: 0 -2px;
+    padding: 0.5rem calc(1.25rem + 2px) 0.5rem 0;
+    z-index: 999;
+}
+#years span[class]{
+    font-weight: bold;
+    width: 4.5rem;
+    text-align: right;
+}
+.table-wrap{
+    padding: 0 0.75rem 1.5rem 0.75rem;
+}
+
+span:not(.sr-only){
+    font-weight: normal;
+
+}
