--- a/FREECODECAMP/BuildingABalanceSheet/styles7.css
+++ b/FREECODECAMP/BuildingABalanceSheet/styles7.css
@@ -60,9 +60,6 @@ section{
     padding: 0 0.75rem 1.5rem 0.75rem;
 }
 
-span{
-    font-weight: normal;
-}
 table{
     border-collapse: collapse;
     border: 0;
@@ -80,5 +77,56 @@ table caption{
 }
 tbody td{
     width: 100vw;
+    min-width: 4rem;
+    max-width: 4rem;    
+}
+tbody th{
+  width: calc(100% - 12rem);
+}
+tr[class="total"]{
+    font-weight: bold;
+    border-bottom: 4px double #0a0a23;
+}
+tr[class="total"] th{
+    text-align: left;
+    padding: 0.5rem 0 0.25rem 0.5rem;
+}
+
+tr.total td{
+    text-align: right;
+    padding: 0 0.25rem;
+}
+tr.total td:nth-of-type(3){
+    padding-right: 0.5rem;
+}
+
+tr.total:hover{
+    background-color: #99c9ff;
+}
+td.current{
+    font-style: italic;
+}
+tr.data{
+    background-image: linear-gradient(to bottom,#dfdfe2 1.845rem,white 1.845rem);
+}
+tr.data th{
+    text-align: left;
+    padding-top: 0.3rem;
+    padding-left: 0.5rem;
+}
+tr.data th .description{
+    font-style: italic;
+    display: block;
+    font-weight: normal;
+    padding: 1rem 0 0.75rem;
+    margin-right: -13.5rem;
     
+}
+tr.data td{
+   vertical-align: top;
+   text-align: right;
+   padding: 0.3rem 0.25rem 0;
+}
+tr.data td:last-of-type{
+    padding-right: 0.5rem;
 }
