--- a/FREECODECAMP/BuildingACatPainting/styles8.css
+++ b/FREECODECAMP/BuildingACatPainting/styles8.css
@@ -4,3 +4,17 @@
 body{
     background-color: #c9d2fc;
 }
+.cat-head{
+    position: absolute;
+    right: 0;
+    left: 0;
+    top: 0;
+    bottom: 0;
+    margin: auto;
+    
+    width: 205px;
+    height: 180px;
+    border: 1px solid #000;
+    border-radius: 46%;
+    background: linear-gradient(#5e5e5e 85%,#45454f 100%);
+}
