--- a/FREECODECAMP/BuildingACitySkyLine/styles10.css
+++ b/FREECODECAMP/BuildingACitySkyLine/styles10.css
@@ -1,3 +1,8 @@
+:root{
+    --building-color1:#aa80ff;
+    --building-color2:#66cc99;
+    --building-color3: #cc6699;
+}
 *{
     border: 1px solid black;
     box-sizing: border-box;
@@ -20,8 +25,6 @@ body{
     display: flex;
     flex-direction: column;
     align-items: center;
-    --building-color1:#aa80ff;
-    --building-color2:#66cc99;
 
 }
 .bb1a{
@@ -53,6 +56,7 @@ body{
 .bb3{
     width: 10%;
     height: 55%;
+    background-color: var(--building-color3, pink);
 }
 .bb4{
     width: 11%;
