--- a/FREECODECAMP/Certification Project/ProductLandingPage/productstyles.css
+++ b/FREECODECAMP/Certification Project/ProductLandingPage/productstyles.css
@@ -9,12 +9,15 @@
 }
 
 body {
-  background-color: #eee;
+  background-color: #70b2d9;
+  background-image: linear-gradient(315deg, #70b2d9 0%, #39e5b6 74%);
   font-family: 'Lato', sans-serif;
 }
 
 #page-wrapper {
   position: relative;
+  background-color: #70b2d9;
+background-image: linear-gradient(315deg, #70b2d9 0%, #39e5b6 74%);
 }
 
 li {
@@ -59,6 +62,8 @@ header {
   justify-content: space-around;
   align-items: center;
   background-color: #eee;
+  background-color: #70b2d9;
+background-image: linear-gradient(315deg, #70b2d9 0%, #39e5b6 74%);
 }
 
 @media (max-width: 600px) {
