--- a/CSS-EXERCISE/Exercise4/exercise4.css
+++ b/CSS-EXERCISE/Exercise4/exercise4.css
@@ -4,6 +4,7 @@ body {
     align-items: center;
     height: 100vh;
     margin: 0;
+    background-color: lightblue;
   }
   
   .box {
@@ -15,6 +16,7 @@ body {
   
   #box1 {
     background-color: #ffcccb;
+    
   }
   
   #box2 {
@@ -29,6 +31,7 @@ body {
   @media only screen and (max-width: 600px) {
     body {
       flex-direction: column;
+      background-color: #333;
     }
   
     .box {
